--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     />
     <meta
       name="keywords"
-      content="Ajefismo,  Cuba,  Proyecto Ajef, Proyecto Ajef Raíces, Herminio Rivera, Logia, Logia Ajef "
+      content="Ajefismo, Cuba, Proyecto Ajef, Proyecto Ajef Raíces, Herminio Rivera, Logia, Logia Ajef "
     />
     <meta name="author" content="Briell Quintana" />
     <meta name="robots" content="index, follow" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/public/main-img.jpg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/components/assets/favibon.png"
+    />
 
     <!-- Title -->
     <title>Proyecto Ajef Raíces</title>
